--- a/css files/stylesheet.css
+++ b/css files/stylesheet.css
@@ -1,3 +1,4 @@
+/* Color Of The Body */
 body {
     background-color: #C0A9BD;
   }
@@ -74,3 +75,38 @@ body {
     height: 30px;
     background-color: #ffffff;
 }
+
+/* Flex Settings*/
+.flex-container {
+    display: flex;
+    background-color: #C0A9BD;
+    margin: -10px;
+    padding-left: 55px;
+    padding-top: 100px;
+  }
+  
+  /* MoFlex Buttons Settings*/
+  .flex-container a {
+    background-color: white;
+    color: #000000;
+    display: block;
+    width: 85px;
+    height: 40px;
+    margin: 30px;
+    text-align: center;
+    line-height: 20px;
+    font-size: 15px;
+    text-decoration: none;
+    padding: 15px;
+    border: 2px solid black;
+    border-radius: 15px;
+  }
+
+  /* Flex Setting While Hoover */
+  .flex-container a:hover {
+    background-color: #000000;
+    color: #ffffff;
+    border: 2px solid white;
+  }
+
+  .wrap { flex-wrap: wrap; }
