--- a/css files/stylesheet.css
+++ b/css files/stylesheet.css
@@ -110,3 +110,62 @@ body {
   }
 
   .wrap { flex-wrap: wrap; }
+
+
+  .flex-parent {
+    display: flex;
+    background-color: SlateGrey;
+    margin: 0 0 10px 0
+  }
+  
+  .flex-parent > div {
+    font-family: monospace;
+    background-color: LightGrey;
+    width: 100px;
+    margin: 10px;
+    text-align: center;
+    line-height: 75px;
+    font-size: 30px;
+  }
+
+  .around { 
+    justify-content: space-around; 
+  }
+
+  /* Hero Image Setting */
+  .hero-image1 {
+    /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://galacticsabers.co/wp-content/uploads/2023/08/mattgallodesigns_the_planet_naboo_from_star_wars_hyper_realism__92ca62a7-f8f0-458f-a6a7-49c3120150de-1024x574.png");
+    padding-left: 20px;
+    margin: 20px;
+    justify-content: left;
+    align-items: left;
+  }
+
+  .hero-image2 {
+    padding-left: 20px;
+    margin: 20px;
+    justify-content: right right;
+    align-items: right right;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://i.pinimg.com/originals/00/84/89/0084892bd1326bdcb2cc597820af2fdf.png")
+  }
+
+  .hero-image1, .hero-image2 {
+    width: 300px;
+    height: 200px;
+    border-radius: 15px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+  }
+  
+  /* Place text in the middle of the image */
+  .hero-text1, .hero-text2 {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+  }
