--- a/css files/stylesheet.css
+++ b/css files/stylesheet.css
@@ -114,14 +114,14 @@ body {
 
   .flex-parent {
     display: flex;
-    background-color: SlateGrey;
-    margin: 0 0 10px 0
+    padding-top: 20px;
   }
   
   .flex-parent > div {
     font-family: monospace;
     background-color: LightGrey;
-    width: 100px;
+    width: 300px;
+    height: 200px;
     margin: 10px;
     text-align: center;
     line-height: 75px;
@@ -151,8 +151,6 @@ body {
   }
 
   .hero-image1, .hero-image2 {
-    width: 300px;
-    height: 200px;
     border-radius: 15px;
     background-position: center;
     background-repeat: no-repeat;
