--- a/css files/stylesheet.css
+++ b/css files/stylesheet.css
@@ -81,8 +81,8 @@ body {
     display: flex;
     background-color: #C0A9BD;
     margin: -10px;
-    padding-left: 55px;
-    padding-top: 100px;
+    padding: 100px;
+    position: relative;
   }
   
   /* MoFlex Buttons Settings*/
@@ -92,7 +92,7 @@ body {
     display: block;
     width: 85px;
     height: 40px;
-    margin: 30px;
+    margin: 35px;
     text-align: center;
     line-height: 20px;
     font-size: 15px;
@@ -114,7 +114,7 @@ body {
 
   .flex-parent {
     display: flex;
-    padding-top: 20px;
+    padding-top: 40px;
   }
   
   .flex-parent > div {
@@ -147,7 +147,7 @@ body {
     margin: 20px;
     justify-content: right right;
     align-items: right right;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://i.pinimg.com/originals/00/84/89/0084892bd1326bdcb2cc597820af2fdf.png")
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://free4kwallpapers.com/uploads/originals/2019/11/21/star-wars-wallpaper.jpg")
   }
 
   .hero-image1, .hero-image2 {
