--- a/css files/stylesheet.css
+++ b/css files/stylesheet.css
@@ -129,6 +129,26 @@ body {
     font-size: 15px;
   }
 
+
+  .flex-parent a {
+    color: #000000;
+    text-align: center;
+    text-decoration: none;
+    font-size: 17px; 
+    line-height: 25px;
+    border: 2px solid black;
+    background-color: #ffffff;
+    float: left;
+    cursor: pointer;
+    border-radius: 15px;
+    margin: 5px;
+  }
+
+  .flex-parent a:hover {
+    background-color: #000000;
+    color: #ffffff;
+  }
+
   .around { 
     justify-content: space-around; 
   }
