--- a/css files/stylesheet.css
+++ b/css files/stylesheet.css
@@ -211,3 +211,47 @@ body {
   h1 {
     text-align: center;
   }
+
+  form {
+    margin: 50px auto;
+    width: 400px;
+    padding: 1em;
+    border: 2px solid #fafafa;
+    border-radius: 1em;
+  }
+
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  form li + li {
+    margin-top: 1em;
+  }
+  
+  label {
+    display: inline-block;
+    width: 90px;
+    text-align: right;
+  }
+  
+  label::after {
+    content: ":";
+  }
+
+  input,textarea {
+  font: 1em sans-serif;
+  width: 300px;
+  box-sizing: border-box;
+  border: 2px solid #849;
+  outline: none;
+  transition: border 2s, background-color 2s;
+}
+
+textarea {
+  vertical-align: middle;
+  height: 5em;
+  resize: vertical;
+  resize: none;
+}
