--- a/css files/stylesheet.css
+++ b/css files/stylesheet.css
@@ -222,7 +222,10 @@ body {
     text-align: center;
   }
 
+  /*Main Form Setting*/
   form {
+    background-color: #ffffff;
+    color: #000000;
     margin: 50px auto;
     width: 600px;
     padding: 1em;
@@ -230,35 +233,36 @@ body {
     border-radius: 1em;
   }
 
+  /*Placement Of The Form*/
   ul {
     list-style: none;
-    padding: 5px;
-    margin: 5px;
-  }
-
-  form li + li {
-    margin-top: 1px;
+    padding: 10px;
+    margin: 10px;
   }
   
+  /*Length Of The Text In Form*/
   label {
     display: inline-block;
     width: 200px;
     text-align: center;
   }
   
+  /*Input Field After This Sign*/
   label::after {
     content: ":";
   }
 
+  /*Input Area Code*/
   input,textarea {
   font: 1em sans-serif;
   width: 350px;
   box-sizing: border-box;
   border: 2px solid #000000;
   outline: none;
-  transition: border 2s, background-color 2s;
+  background-color: #C0A9BD;
 }
 
+/*Comment Field Code*/
 textarea {
   vertical-align: middle;
   height: 5em;
@@ -266,11 +270,14 @@ textarea {
   resize: none;
 }
 
-nav li a:hover {
-  background-color: #fafafa;
-  color: #000000;
-}
-
-nav li.special {
-  float: right;
+form a {
+  border: 2px solid #000000;
+  background-color: #C0A9BD;;
+  float: center;
+  cursor: pointer;
+  border-radius: 15px;
+  margin: 200px;
+  padding: 10px;
+  text-decoration: none;
+  color: #ffffff;
 }
