--- a/css files/stylesheet.css
+++ b/css files/stylesheet.css
@@ -282,3 +282,15 @@ form a {
   text-decoration: none;
   color: #000000;
 }
+
+.bodybuttons {
+  border: 2px solid #000000;
+  background-color: #ffffff;;
+  float: left;
+  cursor: pointer;
+  border-radius: 15px;
+  text-decoration: none;
+  color: #000000;
+  font-size: 15px; 
+  line-height: 15px;
+}
