--- a/css files/stylesheet.css
+++ b/css files/stylesheet.css
@@ -74,6 +74,7 @@ body {
     width: 100%;
     height: 30px;
     background-color: #ffffff;
+    padding: 20px;
 }
 
 /* Flex Settings*/
@@ -283,6 +284,7 @@ form a {
   color: #000000;
 }
 
+/*Buttons In Body Code*/
 .bodybuttons {
   border: 2px solid #000000;
   background-color: #ffffff;;
