--- a/css files/stylesheet.css
+++ b/css files/stylesheet.css
@@ -128,7 +128,7 @@ body {
 
 
   /* Flex Setting While Hoover */
-  .flex-container a:hover {
+  .flex-container a:hover, #pagetitle a:hover, .flex-parent a:hover, .bodybuttons a:hover {
     background-color: #000000;
     color: #ffffff;
     border: 2px solid white;
@@ -153,13 +153,6 @@ body {
     text-align: center;
     line-height: 20px;
     font-size: 15px;
-  }
-
-
-  /*Hero Images Buttons While Hover*/
-  .flex-parent a:hover {
-    background-color: #000000;
-    color: #ffffff;
   }
 
   /*Hero Images Flex Setting*/
@@ -290,4 +283,8 @@ form a {
   padding: 10px;
   text-decoration: none;
   color: #000000;
+}
+
+#pagetitle > div {
+  text-align: center;
 }
