--- a/css files/stylesheet.css
+++ b/css files/stylesheet.css
@@ -183,8 +183,19 @@ body {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://free4kwallpapers.com/uploads/originals/2019/11/21/star-wars-wallpaper.jpg")
   }
 
+  .hero-image3 {
+    margin: 20px;
+    margin-inline: auto;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://rare-gallery.com/uploads/posts/552959-star-wars-wallpaper.jpg")
+  }
+
+  .hero-image3 {
+    height: 600px;
+    width: 700px;
+  }
+
   /*Both Heroes Setting*/
-  .hero-image1, .hero-image2 {
+  .hero-image1, .hero-image2, .hero-image3 {
     border-radius: 15px;
     background-position: center;
     background-repeat: no-repeat;
@@ -193,7 +204,7 @@ body {
   }
   
   /* Place text in the middle of the image */
-  .hero-text1, .hero-text2 {
+  .hero-text1, .hero-text2, .hero-text3 {
     text-align: center;
     position: absolute;
     top: 50%;
