--- a/css files/stylesheet.css
+++ b/css files/stylesheet.css
@@ -4,7 +4,7 @@ body {
   }
 
 /*All Buttons Main Settings*/
-.flex-container a, .bodybuttons a, .flex-parent a, .headerbutton, .titlebutton a, .specialbutton a {
+.flex-container a, .bodybuttons a, .flex-parent a, .headerbutton, .titlebutton a, .specialbutton a, .becomebutton a {
     background-color: #ffffff;
     border-radius: 15px;
     border: 2px solid #000000;
@@ -25,7 +25,7 @@ body {
   }
 
 /* MoFlex Buttons Settings*/
-.flex-container a, .specialbutton a {
+.flex-container a, .specialbutton a, .becomebutton a {
     display: block;
     width: 85px;
     height: 40px;
