--- a/css files/stylesheet.css
+++ b/css files/stylesheet.css
@@ -194,7 +194,7 @@ body {
     width: 700px;
   }
 
-  /*Both Heroes Setting*/
+  /*Hero Images Setting*/
   .hero-image1, .hero-image2, .hero-image3 {
     border-radius: 15px;
     background-position: center;
@@ -203,7 +203,7 @@ body {
     position: relative;
   }
   
-  /* Place text in the middle of the image */
+  /* Place text in the middle of the image Hero Images */
   .hero-text1, .hero-text2, .hero-text3 {
     text-align: center;
     position: absolute;
