--- a/css files/stylesheet.css
+++ b/css files/stylesheet.css
@@ -183,7 +183,6 @@ body {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://free4kwallpapers.com/uploads/originals/2019/11/21/star-wars-wallpaper.jpg")
   }
 
-  
   .hero-image3 {
     margin: 20px;
     margin-inline: auto;
@@ -194,7 +193,12 @@ body {
     margin: 20px;
     margin-inline: auto;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://e0.pxfuel.com/wallpapers/264/701/desktop-wallpaper-star-wars-star-wars-star-starwars-and-aesthetic-star-wars.jpg")
+  }
 
+  .hero-image5 {
+    margin: 20px;
+    margin-inline: auto;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://getwallpapers.com/wallpaper/full/5/9/9/1509622-popular-star-wars-wallpaper-ipad-1125x2436-samsung-galaxy.jpg")
   }
 
   .hero-image3 {
@@ -207,8 +211,13 @@ body {
     width: 700px;
   }
 
+  .hero-image5 {
+    height: 250px;
+    width: 500px;
+  }
+
   /*Hero Images Setting*/
-  .hero-image1, .hero-image2, .hero-image3, .hero-image4 {
+  .hero-image1, .hero-image2, .hero-image3, .hero-image4, .hero-image5 {
     border-radius: 15px;
     background-position: center;
     background-repeat: no-repeat;
@@ -217,7 +226,7 @@ body {
   }
   
   /* Place text in the middle of the image Hero Images */
-  .hero-text1, .hero-text2, .hero-text3, .hero-text4 {
+  .hero-text1, .hero-text2, .hero-text3, .hero-text4, .hero-text5 {
     text-align: center;
     position: absolute;
     top: 50%;
