--- a/css files/stylesheet.css
+++ b/css files/stylesheet.css
@@ -180,42 +180,50 @@ body {
     flex-direction: column; 
   }
 
+  /*Common Code In Hero 1 + 2*/
+  .hero-image1, .hero-image2 {
+    padding-left: 20px;
+  }
+
+  /*All Heroe Images Common Code*/
+  .hero-image1, .hero-image2, .hero-image3, .hero-image4, .hero-image5, .hero-image6, .hero-image7 {
+    margin: 20px;
+  }
+
+  /*Common Code In Hero 3, 4, 5 + 7*/
+  .hero-image3, .hero-image4, .hero-image5, .hero-image7 {
+    margin-inline: auto;
+  }
+
   /* Best Seller Hero Image  Setting */
   .hero-image1 {
     /* "linear-gradient" adds a darken background effect to the photo */
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://mpudata.sfo2.digitaloceanspaces.com/original/2X/6/6f7d37cd5f7ef08a2a17602e0aa6ad3a6880d747.jpeg");
-    padding-left: 20px;
-    margin: 20px;
   }
 
   /*New Arrivals Hero Image Setting*/
   .hero-image2 {
-    padding-left: 20px;
-    margin: 20px;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://free4kwallpapers.com/uploads/originals/2019/11/21/star-wars-wallpaper.jpg")
   }
 
   .hero-image3 {
-    margin: 20px;
-    margin-inline: auto;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://rare-gallery.com/uploads/posts/552959-star-wars-wallpaper.jpg")
   }
 
   .hero-image4 {
-    margin: 20px;
-    margin-inline: auto;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://e0.pxfuel.com/wallpapers/264/701/desktop-wallpaper-star-wars-star-wars-star-starwars-and-aesthetic-star-wars.jpg")
   }
 
   .hero-image5 {
-    margin: 20px;
-    margin-inline: auto;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://getwallpapers.com/wallpaper/full/5/9/9/1509622-popular-star-wars-wallpaper-ipad-1125x2436-samsung-galaxy.jpg")
   }
 
   .hero-image6 {
-    margin: 20px;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://media.idownloadblog.com/wp-content/uploads/2019/11/Star-Wars-Rise-of-Skywalker-Emporer-iPhone-wallpaper-no-logo.jpg")
+  }
+
+  .hero-image7 {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://i.pinimg.com/736x/85/5f/a3/855fa3c4270bcbab0bbd3612298ecad7.jpg")
   }
 
   .hero-image3 {
@@ -238,8 +246,13 @@ body {
     width: 600px;
   }
 
+  .hero-image7 {
+    height: 400px;
+    width: 600px;
+  }
+
   /*Hero Images Setting*/
-  .hero-image1, .hero-image2, .hero-image3, .hero-image4, .hero-image5, .hero-image6 {
+  .hero-image1, .hero-image2, .hero-image3, .hero-image4, .hero-image5, .hero-image6, .hero-image7 {
     border-radius: 15px;
     background-position: center;
     background-repeat: no-repeat;
@@ -248,7 +261,7 @@ body {
   }
   
   /* Place text in the middle of the image Hero Images */
-  .hero-text1, .hero-text2, .hero-text3, .hero-text4, .hero-text5, .hero-text6 {
+  .hero-text1, .hero-text2, .hero-text3, .hero-text4, .hero-text5, .hero-text6, .hero-text7 {
     text-align: center;
     position: absolute;
     top: 50%;
@@ -282,11 +295,6 @@ body {
     text-align: center;
   }
 
-  /*Position Of All H1s* + H2s */
-  h1, h3 {
-    text-align: center;
-  }
-
   /*Main Form Setting*/
   .contactform, .checkoutform {
     background-color: #ffffff;
@@ -297,10 +305,12 @@ body {
     border-radius: 1em;
   }
 
+  /*Contact Form In Contact Page Code*/
   .contactform {
     margin: 50px auto;
   }
 
+  /*Checkout Form Code*/
   .checkoutform {
     margin: 20px;
   }
@@ -355,7 +365,8 @@ form a {
   color: #ffffff;
 }
 
-#pagetitle > div, .textcart {
+/*Text Align */
+#pagetitle > div, .textcart, h1, h3 {
   text-align: center;
 }
 
