--- a/cssfiles/stylesheet.css
+++ b/cssfiles/stylesheet.css
@@ -480,4 +480,17 @@ form a {
     font-size: 13px;
   }
 
+  .hero-image3 {
+    height: 500px;
+    width: 500px;
+  }
+  
+  .hero-text3 {
+    text-allign: auto;
+  }
+  
+  .becomebutton {
+    margin-inline: auto;
+  }
+
 }
