--- a/cssfiles/stylesheet.css
+++ b/cssfiles/stylesheet.css
@@ -445,6 +445,20 @@ form a {
     line-height: 20px;
     font-size: 15px;
   }
+
+  h1 {
+    width: 550px;
+    line-height: 30px;
+    font-size: 25px;
+    text-align: center;
+  }
+  
+  h2 {
+    width: 500px;
+    line-height: 25px;
+    font-size: 20px;
+    text-align: center;
+  }
   
   .flex-container a {
     font-size: 13px;
